# omni-support-env

./: .gitignore  .hfignore  Dockerfile  README.md  agent.py  app_streamlit.py  client.py  collect_training_data.py  deploy_hf.py  evaluation_log.txt  inference.py  make_colab.py  models.py  omni_support_training.ipynb  openenv.yaml  pyproject.toml  requirements-docker.txt  requirements.txt  run_all.bat  run_hf.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  train.py
data/: rollouts.jsonl
omni-grpo-output/: training_rewards.csv
outputs/: evaluation_log.txt  outputs.txt
server/: Dockerfile  app.py  environment.py  graders.py  reward.py  tasks.py  tools.py
